[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "portfolio-ask"
version = "0.1.0"
description = "AI-powered portfolio Q&A CLI — RAG + multi-step agent over Indian equity data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "sentence-transformers>=3.0.0",
    "faiss-cpu>=1.8.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
    "numpy>=1.26.0",
]

[project.scripts]
portfolio-ask = "portfolio_ask.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["portfolio_ask"]
